# terminal-dex-scraper

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/terminal_dex_scraper/: __init__.py
src/terminal_dex_scraper/config/: __init__.py  constants.py  settings.py
src/terminal_dex_scraper/gen_1/red_and_blue/: __init__.py  pokemon_data.py  utils.py
src/terminal_dex_scraper/gen_1/red_and_blue/scrapers/: __init__.py  evolution_type_constants.py  evolutions_and_moves.py  growth_rate_constants.py  icon_constants.py  item_constants.py  move_constants.py  pokedex_constants.py  pokedex_entries.py  pokedex_order.py  pokemon_base_stats.py  pokemon_constants.py  pokemon_cries.py  pokemon_menu_icons.py  pokemon_names.py  pokemon_palettes.py  sgb_palette_constants.py  type_constants.py
src/terminal_dex_scraper/utils/: __init__.py  repos.py
