[project]
name = "terminal-dex-scraper"
version = "0.1.0"
description = "Initial setup for Terminal Dex Scraper."
readme = "README.md"
authors = [
    { name = "VictorF13", email = "victorabreuf13@gmail.com" }
]
maintainers = [
    { name = "VictorF13", email = "victorabreuf13@gmail.com" }
]
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "gitpython>=3.1.45",
    "pydantic-settings>=2.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.extend-select = ["ALL"]
lint.ignore = ["PLR0913", "D203", "D213", "COM812"]

[tool.basedpyright]
include = ["src"]
typeCheckingMode = "recommended"

[dependency-groups]
dev = [
    "basedpyright>=1.31.4",
    "click>=8.3.0",
    "prek>=0.2.1",
    "ruff>=0.13.1",
]

