[project]
name = "terminal-dex-scraper"
version = "0.1.0"
description = "Initial setup for Terminal Dex Scraper."
readme = "README.md"
authors = [
    { name = "VictorF13", email = "victorabreuf13@gmail.com" }
]
maintainers = [
    { name = "VictorF13", email = "victorabreuf13@gmail.com" }
]
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "gitpython>=3.1.45",
    "pillow>=12.0.0",
    "pydantic-settings>=2.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.extend-select = ["ALL"]
lint.ignore = ["PLR0913", "D203", "D213", "COM812"]

[tool.ty]
src.include = ["src", "tests"]
rules.division-by-zero = "warn"
rules.possibly-unresolved-reference = "warn"
rules.unused-ignore-comment = "warn"

[dependency-groups]
dev = [
    "click>=8.3.0",
    "prek>=0.2.13",
    "ruff>=0.14.4",
    "ty>=0.0.3",
]
